[project]
name = "rspt2spectra"
description = "RSPt interface for fitting hybridization funcitons and reading operators. Forked from https://github.com/JohanSchott/rspt2spectra"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
 "numpy>2.0.0",
 "scipy>1.13",
 "numpydoc",
 "sphinx",
 "pytest",
 "matplotlib",
 "mpi4py"
]
dynamic = ["version"]


[tool.black]
line-length = 120
target-version = ["py311"]

[project.scripts]
build_h0 = "rspt2spectra.scripts.build_h0:main"

[project.urls]
Homepage = "https://github.com/johanjoensson/rspt2spectra"
Issues = "https://github.com/johanjoensson/rspt2spectra//issues"


[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.cython-lint]
# Match Black's line length so long lines aren't flagged against the 88 default.
max-line-length = 120
# E501: long lines are still reported by max-line-length above for genuinely long
#       code, but we don't enforce wrapping (e.g. the `# cython:` directive line
#       and long cdef signatures can't be wrapped). E741: ambiguous names like `O`
#       are already ignored for Python (see [tool.ruff] lint.ignore).
ignore = ["E501", "E741"]

[tool.ruff]
line-length = 120

lint.select = ["E", "F", "B", "C4", "PL", "A", "SIM", "RUF", "PGH", "I"]

lint.ignore = ["B905", "PLR2004", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "SIM105","RUF005", "PGH003", "C408", "SIM118", "E741", "PLR5501"]
